name:                BigBunnyAndDeer
version:             0.1.0.0
synopsis:            Big bunny and deer
description:         Big bunny and deer
homepage:            https://github.com/Javran/BigBunnyAndDeer
license:             MIT
license-file:        LICENSE
author:              Javran Cheng
maintainer:          Javran.c@gmail.com
copyright:           Copyright (c) 2015 Javran Cheng
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable BigBunnyAndDeer
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       curl,
                       time,
                       MonadRandom,
                       directory,
                       strict,
                       twitter-conduit,
                       text,
                       http-conduit,
                       bytestring,
                       authenticate-oauth,
                       containers,
                       data-default,
                       ConfigFile,
                       MissingH,
                       mtl,
                       random-fu,
                       rvar,
                       mwc-random,
                       random-extras,
                       primitive,
                       transformers,
                       optparse-applicative,
                       split
  hs-source-dirs:      src
  default-language:    Haskell2010